<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="0dp"
    tools:context=".Phone_Verification">


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/status"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="79dp" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/enterCode"
        android:inputType="numberPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="222dp" />

    <Button
        android:id="@+id/verifyButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/verifyCode"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/sendButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/sendVerificationCode" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/verifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/status"
        android:layout_centerHorizontal="true"
        android:text="@string/letsVerify"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

</RelativeLayout>